# teiko-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  db-delete.sh  get-os-deps.sh  init-db.sh  pyproject.toml  set-py-venv.sh  test.py  venv-setup.sh
api/: crud.py  main.py  models.py  routers.py  schemas.py  services.py
app/: models.py
back/: pyproject.toml
back/app/: models.py  schemas.py
client/: index.html  style.css
db/design/: relations.csv
db/init/: create_tables.sql  seed_data.sql
